--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-Unidecode==1.1.0
-PyYAML== 5.1.1
-requests==2.22.0
 beautifulsoup4==4.7.1
+certifi==2019.3.9
+chardet==3.0.4
+idna==2.8
+python-dateutil==2.8.0
+PyYAML==5.1.1
+requests==2.22.0
+six==1.12.0
+soupsieve==1.9.1
+Unidecode==1.1.0
+urllib3==1.25.3
